2005-06-21  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/Collector/SNMP.pm (initTargetAttributes):
	Target is deleted when SNMP map expansion fails

2005-06-16  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/Monitor.pm: sleep --delay minutes also after
	recompiling

	* configs/torrus-config.pl:
	$Torrus::Collector::SNMP::unreachableTimeout increased to 1900
	$Torrus::Collector::SNMP::unreachableRetryDelay increased to 600

	* perllib/Torrus/Collector/SNMP.pm:
	Better handling of SNMP errors. Delete all tokens for a host
	if it is unreachable.

2005-06-09  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* NEWS: Torrus release 1.0.0

	* bin/monitor.in: New option: --delay

	* init.d/torrus.in: The init script reads its options from
	initscript.conf and initscript.siteconf

2005-06-08  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* bin/devdiscover.in: new CLI option: --forcebundle

	* perllib/Torrus/DevDiscover.pm: monitor-period and monitor-timeoffset
	are now copied from DDX

	* bin/action_snmpv1trap.in, bin/action_snmptrap.in,
	sup/mibs/TORRUS-MIB.txt: Added new SNMP variable: severity

2005-06-02  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/CiscoIOS_MacAccounting.pm:
	New discovery module for Cisco MAC accounting

2005-05-30  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/BetterNetworks.pm:
	new discovery module

	* bin/collector.in: new command line option: --runalways

2005-05-27  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/MicrosoftWindows.pm:
	per-interface RRD files named by MAC addresses, not interface name

2005-05-25  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/CiscoGeneric.pm: enchanced memory
	pools stats (line cards and VIP memory)

2005-05-23  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
