@@ -34,6 +34,7 @@ our $infile;
 our $makedirs;
 our $limitre;
 our $forcebundle;
+our $fallback;
 
 # Hidden parameter for debugging
 our $snmpdebug = 0;
@@ -64,6 +65,7 @@ my $ok = GetOptions(
                     'mkdir'       => \$makedirs,
                     'limit=s'     => \$limitre,
                     'forcebundle' => \$forcebundle,
+                    'fallback=i'  => \$fallback,
                     'snmpdebug'   => \$snmpdebug,
                     'verbose'     => \$verbose,
                     'debug'       => \$debug
@@ -77,6 +79,7 @@ if( not $ok or not $infile or scalar( @ARGV ) > 0 )
     " --mkdir                 create data-dir directories\n",
     " --limit=regexp          limit the discovery by output files\n",
     " --forcebundle           always write the bundle file\n",
+    " --fallback=integer      maximum age of XML file to fall back to\n",
     " --verbose               print extra information\n",
     " --debug                 print debugging information\n",
     " --snmpdebug             print SNMP protocol details\n",
@@ -242,11 +245,20 @@ foreach my $outfile ( sort keys %{$perOutfileHostParams} )
     }
     elsif( $forcebundle )
     {
-        foreach my $bundleName ( sort keys %outputBundles )
+        if( defined( $fallback ) and
+            -e $outfile and -M $outfile <= $fallback )
+        {               
+            Warn('Falling back to the old version of ' .
+                 relXmlFilename($outfile));
+        }
+        else
         {
-            delete $outputBundles{$bundleName}{ relXmlFilename($outfile) };
-            Warn('Bundle ' . $bundleName . ' will not have ' .
-                 relXmlFilename($outfile) . ' included because of errors');
+            foreach my $bundleName ( sort keys %outputBundles )
+            {
+                delete $outputBundles{$bundleName}{ relXmlFilename($outfile) };
+                Warn('Bundle ' . $bundleName . ' will not have ' .
+                     relXmlFilename($outfile) . ' included because of errors');
+            }
         }
         $everythingsOk = 1;
     }
