@@ -59,6 +59,12 @@ I<REGEXP>.
 With this option enabled, C<devdiscover> will write the bundle
 file even if some of the bundle members were not created because of errors.
 
+=item B<--fallback>=I<INTEGER>
+
+Requires B<--forcebundle>. In case if an SNMP device is not available,
+the bundle file will include an older version of the XML output file,
+provided that it exists and it is not older than the specified number of days.
+
 =item B<--verbose>
 
 Prints extra information.
